kalossi-browser (0.1) UNRELEASED; urgency=low

  * Initial packaging.

 -- Olivier Tilloy <olivier.tilloy@canonical.com>  Mon, 14 Jan 2013 13:02:15 +0100