@@ -1,0 +1,2 @@
+usr/lib/python*/dist-packages/kalossi_browser/*
+
